organice la pagina sobre desarrollo web y cree la pagina de base de taos

--- a/Proyecto/public/pagina sobre desrrollo web.html
+++ b/Proyecto/public/pagina sobre desrrollo web.html
@@ -9,13 +9,59 @@
 </head>
 
 <body>
-    <div class="caja">
-        <H1>INFORMACION BASICA SOBRE DESARROLLO WEB</H1>
-        <P>Primero definamos qué es la programación web. Se trata del proceso por el cual desarrollas y diseñas una página
-            web. Al igual que en la programación tradicional, para crear una web se utilizan una serie de lenguajes que te
-            permiten dar forma al proyecto que quieres levantar. </P>  
-      </div>
+
+    <H1>INFORMACION BASICA SOBRE DESARROLLO WEB <input class="boton1" type="button" value="Siguiente.."><a href="../page/pagina de base de datos.html"></a></H1>
     
+    <section class="cajas2">
+        <div class="caja1">
+            <h2>¿Qué es la programación web</h2>
+            <P>Se trata del proceso por el cual desarrollas y diseñas una página
+                web. Al igual que en la programación tradicional, para crear una web se utilizan una serie de lenguajes
+                que te
+                permiten dar forma al proyecto que quieres levantar?</P>
+        </div>
+    </section>
+
+    
+
+    <section class="cajas3">
+        <div class="caja2">
+            <h2>JavaScript</h2>
+            <P>JavaScript es un lenguaje de programación o de secuencias de comandos que te permite implementar
+                funciones complejas en páginas web, cada vez que una página web hace algo más que sentarse allí y
+                mostrar información estática para que la veas, muestra oportunas actualizaciones de contenido, mapas
+                interactivos, animación de Gráficos 2D/3D, desplazamiento de máquinas reproductoras de vídeo, etc.,
+                puedes apostar que probablemente JavaScript está involucrado. Es la tercera capa del pastel de las
+                tecnologías web estándar, dos de las cuales (HTML y CSS) hemos cubierto con mucho más detalle en otras
+                partes del Área de aprendizaje.</P>
+        </div>
+
+        <div class="caja3">
+            <h2>Python</h2>
+            <P>Python es un lenguaje relativamente moderno y diseñado para ser de propósito general. Puede ser usado
+                para prácticamente cualquier tarea que requiera un lenguaje de programación. Diseño web, creación de
+                aplicaciones, bases de datos, automatización de tareas… Es un lenguaje muy versátil que soporta
+                diferentes paradigmas y plataformas. Además de esto, es uno de los lenguajes más sencillos de aprender,
+                con una sintaxis muy similar al inglés. </P>
+        </div>
+
+        <div class="caja3">
+            <h2>Go</h2>
+            <P>Go es el lenguaje de programación de Google, y está desarrollado para ser una mezcla de diferentes
+                lenguajes: tiene una sintaxis muy similar a C, busca ser multiusos como Python pero con un rendimiento
+                similar al de C++. En definitiva, Google ha tratado de mezclar las partes buenas de tres lenguajes
+                diferenciados en uno que tiene como objetivo facilitar el desarrollo de aplicaciones web de alto nivel.
+                Esto se debe a que es un lenguajes muy ligero, por lo que las aplicaciones desarrolladas con Go tienen
+                un rendimiento muy bueno. </P>
+        </div>
+    </section>
+
+
+
+
+
+
+
 
 </body>
 
